@@ -34,6 +34,7 @@ Version 0.5.2
 * Apply patch #1494540 from Daniel Nylander - Updated sv.po translation
 * Apply patch #1463826 ] from goedson - Updated pt_BR translation
 * Fix RFE #1406985 - speed units in the burn dialog
+* Fix RFE #1444098 - Track number column for audio cd's
 
 
 Version 0.5.1
